Refactor test configuration into a shared function
This commit extracts the common test configuration logic from `RoboJavaModulePlugin` and `AndroidProjectConfigPlugin`
into a new `configureTestTask` extension function.